--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Shane Chandler Cyber Security Professional
+title: Shane O. Chandler Cyber Security Professional
 description: 15+ years of IT experience 
 show_downloads: false
 google_analytics:
