--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Shane O. Chandler Security Operations Analyst
-description: 15+ years of IT experience 
+title: Shane O. Chandler Experienced IT Professional 
+description: Over 15 years of experience in IT, currently transitioning to a career in Cyber Security.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
