--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
-title: Shane O. Chandler Experienced IT Professional 
+title: Shane O. Chandler Experienced IT Professional <div id="cursor">_</div>
+
+<script>
+  setInterval(() => {
+    const cursor = document.getElementById('cursor');
+    cursor.style.visibility = cursor.style.visibility === 'hidden' ? 'visible' : 'hidden';
+  }, 500); // Blink every 500ms
+</script>
 description: Over 15 years of experience in IT, currently transitioning to a career in Cyber Security.
 show_downloads: false
 google_analytics:
