--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: Over 15 years of experience in IT, currently transitioning to a car
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
+site_text: "This is my selected text"
+
