--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,14 @@
 title: Shane O. Chandler Experienced IT Professional 
-description: Over 15 years of experience in IT, currently transitioning to a career in Cyber Security.
+description: Over 15 years of experience in IT, currently transitioning to a career in Cyber Security.<span id="cursor">_</span>
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
-site_text: "This is my selected text"
+
+<script>
+  setInterval(() => {
+    const cursor = document.getElementById('cursor');
+    cursor.style.visibility = cursor.style.visibility === 'hidden' ? 'visible' : 'hidden';
+  }, 500); // Blink every 500ms
+</script>
+
 
