--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Shane O. Chandler Experienced IT Professional 
+title: Shane O. Chandler Seasoned IT & Cyber Security Professional 
 description: Over 15 years of experience in IT, currently transitioning to a career in Cyber Security.<span id="cursor">_</span>
 show_downloads: false
 google_analytics:
